src/features/Intro/Intro.module.css
.FlexWrapper {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5rem;

  background-position: center bottom;
  background-size: cover;
  background-repeat: no-repeat;

}


.Wrapper {
  width: 100%;
  height: 100%;
  max-width: 74rem;
  max-height: 44.25rem;

  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 11.44rem;
}

.Contents {
  display: flex;
  flex-direction: column;
  gap: 8.57rem;
}

.Title {
  color: #0C0DFE;

  display: flex;
  flex-direction: column;
  gap: 1.18rem;

  & h2 {
    font-size: 1.5rem;
    line-height: 1.4;
    font-weight: 400;
    height: 2.8125rem;
  }
}

.Logo {
  width: 36.54rem;
}

.Descriptions {
  color: #444;
  font-size: 1.25rem;
  font-weight: 300;
  line-height: 1.4;

  display: flex;
  flex-direction: column;
  gap: 1.75rem;

  & b {
    font-weight: 600;
  }
}

@media screen and (max-width:925px) {
  .FlexWrapper {
    height: auto;
    flex-direction: column;
    align-items: center;
    justify-content: start;

    padding: 8rem 1rem 4rem 1rem;

  }

  .Wrapper {
    max-width: 18.12rem;
    max-height: none;

    justify-content: start;
    align-items: center;
    gap: 5.56rem;
  }

  .Contents {
    gap: 5.625rem;
    align-items: center;
  }

  .Title {
    gap: 0.5rem;
    align-items: center;

    & h2 {
      font-size: 0.625rem;
      height: 0.875rem;
    }
  }

  .Logo {
    width: 15.5rem;
  }

  .Descriptions {
    font-size: 0.6875rem;
    gap: 1.5rem;
    text-align: center;
  }
}

